--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,15 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.dotphotoapp">
+  package="com.dotphotoapp"
+  xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
+      android:theme="@style/AppTheme"
       android:allowBackup="false"
-      android:theme="@style/AppTheme">
+      tools:replace="android:allowBackup"
+      >
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -21,6 +25,8 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <activity android:name="com.ahmedadeltito.photoeditor.PhotoEditorActivity" />
+      <activity android:name="com.yalantis.ucrop.UCropActivity" />
     </application>
 
 </manifest>
