--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-native-fs": "^2.16.4",
+    "react-native-photo-editor": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
