--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-camera": "^3.18.0",
     "react-native-fs": "^2.16.4",
-    "react-native-photo-editor": "^1.0.5"
+    "react-native-photo-editor": "^1.0.5",
+    "react-native-splash-screen": "^3.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
