--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-camera": "^3.18.0",
     "react-native-fs": "^2.16.4",
     "react-native-photo-editor": "^1.0.5"
   },
@@ -23,7 +24,8 @@
     "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.9.0"
+    "react-test-renderer": "16.9.0",
+    "util": "^0.12.1"
   },
   "jest": {
     "preset": "react-native"
