--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.58.0",
-    "react-test-renderer": "16.9.0"
+    "react-test-renderer": "16.9.0",
+    "util": "^0.12.1"
   },
   "jest": {
     "preset": "react-native"
