--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-fs": "^2.16.4",
     "react-native-image-marker": "^0.6.1",
     "react-native-image-picker": "^2.3.0",
-    "react-native-splash-screen": "^3.0.9"
+    "react-native-splash-screen": "^3.0.9",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
