--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,6 +41,8 @@ target 'DOTphotoApp' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'rn-range-slider', :path => '../node_modules/rn-range-slider'
+
   target 'DOTphotoAppTests' do
     inherit! :search_paths
     # Pods for testing
