--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-image-marker": "^0.6.1",
     "react-native-image-picker": "^2.3.0",
     "react-native-splash-screen": "^3.0.9",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "rn-range-slider": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
