--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -181,6 +181,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_cameraroll')
     implementation project(':rn-range-slider')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-camera')
