--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^1.4.1",
     "@react-native-community/image-editor": "^2.2.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
